sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:8: error: ';' expected but 'else' found.
              else {change=false}
              ^AlgBubbleSort1:11: error: illegal start of simple expression
            }}       
            ^AlgBubbleSort1:11: error: 'while' expected but '}' found.
            }}       
             ^